@@ -5,6 +5,6 @@ AUX policyd.confd 61 BLAKE2B d39d4e5894dbc1164d29bf7e3fccc19c4247fd6a0f09c09f07e
 AUX policyd.rc 440 BLAKE2B 58eb5a7975033dc287e1831bd3fe178a324a90df731d078d0242e5185d0ec2c7e2863d3ab679d43172d1e80ac7e7d044f440d33e2d65fc4920d5e652f7e24007 SHA512 353ea57078cdc9b6bac143778e5ea3fa3d5bc6f865614a90499d2687d6afe21fcd5f87d4f8ce0f2a803909de7ae95d56be880c2a4d99a1b674fdb8168e558bc2
 AUX policyd.service 125 BLAKE2B 451606f2c5d8894d65fc5a4acb558a29a0ec695626de0016cd0867c30b0cd907238d066ca78072dafb5520cf92307c7f95fc35388443366d6abdb576a07435e6 SHA512 07153bdfcab3f86ed2c297801a6fd562c258194fe000f3f29fa65a0004ee833d7fd42f89e94ee3490612699ae8351d5010a9962174795039660aec83964a7aa3
 DIST policyd-1.82.tar.gz 68372 BLAKE2B 39603b025235d3a68401e8cf9b357d224515f5308f1b86bf84d1231157ac2d5c2ca4dc00cc9deefdd03cdb4ffc214a8ebe5582e299f05b79a471e93238e36cff SHA512 08de114736620d5f1c11f7183135ecf4589c2d6258dee486b5f4f5a9156e4feabd7eaf19fa09428e79d5d5c72ac4757c83af86f43a7547030b1a59cb368e82a8
-EBUILD policyd-1.82-r4.ebuild 2084 BLAKE2B f9c5a379ce1b79d08ed41e4a2ea1a1847c89188f28616e109da01e479291a81be86a817a9949522b1145e962d151dc8fd8f27dd4af08a61ff1a3eea97169355c SHA512 8bf3b1937fab32df5c0dd4c1970ac99e3cc6ed2d6e37b4d02e38fd1e07eeaa49cd9d196629f7731810bbecf07d6a6b10738279991c23bb514f062a1ac51d5a26
-MISC ChangeLog 636 BLAKE2B 47803dc6a6ec708663557ff7014d816e924788e221b1844acc8dc92e91200a8d2f1eecbb71194015eeba919bdfc95805a81bc56b191aa4e78a8bf7d8fb807f8b SHA512 1f2ca2a5faa13f985b47e2313f8e28d57769a864df3265e835124298d3e65afa9c57529a1011a0c724634ed602bfab752a0e82b67bd1a71a1e7d3416ad47f209
+EBUILD policyd-1.82-r5.ebuild 2011 BLAKE2B 97d335cb3ad35d2b837ff07450b7e58f363753e444d725750e13fe20b8a9d9e2a42c46df6a481163fd2865f28ea5db6e7edcd99e930e789b7446ca398303f68b SHA512 dadb7d9802d5e02544a0b0fceb27412310743ec17e83874936336ef45de252e04d3d7837262229024838bb43f9ce525ea13b002c2ac23c7bba2622bbb3d0bcfe
+MISC ChangeLog 842 BLAKE2B 072ce50d85cda2e210fa721fc9f9c1270e6ab009e463fbf2e66ee58b9ca23845423dda29bd65a803cf38a75ee78d58a2ec44bd5747c16cbdbe0cae55e61ecf7e SHA512 2ca2270efa992e34bf7110bc32bf8e0c524c4117d829dc0a7ef5eec64d302d8be18b5668c9bbe9b07feb6a1bcb56116c308d33972fec015fd67b0aaa5943f7d8
 MISC metadata.xml 249 BLAKE2B cea7fd2e21aaa481df4b19103927fcdd71b9e296720387e01aed419f8f27ef74ed751add3132fd2f811f55265315453ca1b6de218a4b4b78c06b6ec3bcb6d312 SHA512 d9f2d22053f3ff8e8dd64e0a1695fa371612f1f57d62bf1a914ce28443cc910dfb5b4f53b61742668da15ae3f8b9dfd3004c7fe980a71922d0fcf7bc8952ca9b
